@@ -1,13 +1,11 @@
 package com.valr.api.service.order;
 
-import com.fasterxml.jackson.annotation.JsonTypeInfo;
 import com.valr.api.model.order.CurrencyPair;
 import com.valr.api.model.order.Order;
 import com.valr.api.model.order.OrderBook;
 import com.valr.api.model.order.Side;
 import com.valr.api.model.trade.Trade;
 import com.valr.api.utils.IdGenerator;
-import com.valr.api.utils.Locker;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
@@ -17,7 +15,6 @@ import org.springframework.stereotype.Service;
 
 import java.time.Instant;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -26,49 +23,45 @@ import java.util.stream.Collectors;
 @NoArgsConstructor
 public class OrderServiceImpl implements OrderService{
     @Autowired
-    Locker locker;
-    @Autowired
     IdGenerator idGenerator;
 
-    private Map<CurrencyPair, OrderBook> orderBooks = new HashMap<>();
-    private Map<CurrencyPair, List<Trade>> recentTrades = new HashMap<>();
+    private EnumMap<CurrencyPair, OrderBook> orderBooks = new EnumMap<>(CurrencyPair.class);
+    private EnumMap<CurrencyPair, List<Trade>> recentTrades = new EnumMap<>(CurrencyPair.class);
 
     @Override
     public OrderBook getOrderBooks(CurrencyPair pair) {
-        return locker.withReadLock(() -> orderBooks.getOrDefault(pair, createOrderBooks()));
+        return orderBooks.getOrDefault(pair, createOrderBooks());
     }
 
     @Override
     public List<Trade> getTradeHistory(CurrencyPair pair) {
-        return locker.withReadLock(() -> recentTrades.getOrDefault(pair, new ArrayList<>()));
+        return recentTrades.getOrDefault(pair, new ArrayList<>());
     }
 
     @Override
     public Order limitOrder(Order order) {
-        return locker.withWriteLock(() -> {
-            OrderBook orderBook = orderBooks.computeIfAbsent(order.getCurrencyPair(), k -> createOrderBooks());
-            orderBook.setSequenceNumber(orderBook.getSequenceNumber() + 1);
+        OrderBook orderBook = orderBooks.computeIfAbsent(order.getCurrencyPair(), k -> createOrderBooks());
+        orderBook.setSequenceNumber(orderBook.getSequenceNumber() + 1);
 
-            double remainingQuantity;
-            if(Side.BUY == order.getSide()){
-                remainingQuantity = matchOrder(order, orderBook.getAsks(), orderBook, order.getCurrencyPair());
-                if (remainingQuantity > 0.0) {
-                    // Add remaining quantity as a new buy order
-                    Order remainingOrder = new Order(idGenerator.generate(), order.getSide(), remainingQuantity, order.getPrice(), order.getCurrencyPair(), order.getTimestamp());
-                    orderBook.setBids(new HashSet<>(Set.of(remainingOrder)));
-                }
-            }else if(Side.SELL == order.getSide()){
-                remainingQuantity = matchOrder(order, orderBook.getBids(), orderBook, order.getCurrencyPair());
-                if (remainingQuantity > 0.0) {
-                    // Add remaining quantity as a new sell order
-                    Order remainingOrder = new Order(idGenerator.generate(), order.getSide(), remainingQuantity, order.getPrice(), order.getCurrencyPair(), order.getTimestamp());
-                    orderBook.setAsks(new HashSet<>(Set.of(remainingOrder)));
-                }
+        double remainingQuantity;
+        if(Side.BUY == order.getSide()){
+            remainingQuantity = matchOrder(order, orderBook.getAsks(), orderBook, order.getCurrencyPair());
+            if (remainingQuantity > 0.0) {
+                // Add remaining quantity as a new buy order
+                Order remainingOrder = new Order(idGenerator.generate(), order.getSide(), remainingQuantity, order.getPrice(), order.getCurrencyPair(), order.getTimestamp());
+                orderBook.setBids(new HashSet<>(Set.of(remainingOrder)));
             }
+        }else if(Side.SELL == order.getSide()){
+            remainingQuantity = matchOrder(order, orderBook.getBids(), orderBook, order.getCurrencyPair());
+            if (remainingQuantity > 0.0) {
+                // Add remaining quantity as a new sell order
+                Order remainingOrder = new Order(idGenerator.generate(), order.getSide(), remainingQuantity, order.getPrice(), order.getCurrencyPair(), order.getTimestamp());
+                orderBook.setAsks(new HashSet<>(Set.of(remainingOrder)));
+            }
+        }
 
-            orderBook.setLastChange(Instant.now());
-            return order;
-        });
+        orderBook.setLastChange(Instant.now());
+        return order;
     }
 
     private double matchOrder(
@@ -77,7 +70,7 @@ public class OrderServiceImpl implements OrderService{
             OrderBook orderBook,
             CurrencyPair pair
     ) {
-        List<Trade> trades = recentTrades.computeIfAbsent(pair, k -> new ArrayList<>());
+        List<Trade> trades = new ArrayList<>(recentTrades.computeIfAbsent(pair, k -> new ArrayList<>()));
 
         final double[] remainingQuantity = {order.getQuantity()};
 
@@ -111,7 +104,7 @@ public class OrderServiceImpl implements OrderService{
                     }
                 })
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
 
         if (!ordersToRemove.isEmpty()) {
             oppositeOrders.removeAll(ordersToRemove);
